fixed button in dark mode

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -94,8 +94,5 @@ form {
 .button {
   border: none;
   padding: 0.5rem;
-  color: white;
-  background-color: white;
-  color: black;
 }
 
